--- a/package.json
+++ b/package.json
@@ -1,21 +1,44 @@
 {
-  "name": "finedlsorter",
-  "version": "0.0.1-A",
-  "description": "A small node js program to sort your download folder based on a JSON file.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "chokidar": "^1.6.1",
-    "config-node": "^1.3.0",
-    "mv": "^2.1.1"
-  },
-  "devDependencies": {
-    "eslint": "^3.15.0",
-    "eslint-config-airbnb-base": "^11.1.0",
-    "eslint-plugin-import": "^2.2.0"
-  }
+    "name": "finedlsorter",
+    "description": "A cross platform Electron app to sort your specified download folder.",
+    "version": "0.1.0-A",
+    "homepage": "https://github.com/BrandonCravener/FineDLSorter",
+    "author": {
+        "name": "BrandonCravener",
+        "email": "contact@brandoncravener.com",
+        "url": "https://brandoncravener.com"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/BrandonCravener/FineDLSorter.git"
+    },
+    "bugs": {
+        "url": "https://github.com/BrandonCravener/FineDLSorter/issues"
+    },
+    "licenses": [{
+        "type": "MIT",
+        "url": "https://github.com/BrandonCravener/FineDLSorter/blob/master/LICENSE-MIT"
+    }],
+    "main": "lib/index",
+    "engines": {
+        "node": "7.8.0"
+    },
+    "scripts": {
+        "test": "grunt nodeunit"
+    },
+    "devDependencies": {
+        "electron": "^1.6.2",
+        "grunt": "~0.4.5",
+        "grunt-contrib-jshint": "~0.6.4",
+        "grunt-contrib-nodeunit": "~0.2.0",
+        "grunt-contrib-watch": "~0.5.3",
+        "grunt-jsdoc": "^2.1.0"
+    },
+    "keywords": [],
+    "dependencies": {
+        "async": "^2.3.0",
+        "chokidar": "^1.6.1",
+        "nconf": "^0.8.4",
+        "winston": "^2.3.1"
+    }
 }
